# cold-start-NER

./: .gitignore  AGENT_DESIGN.md  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/eval/: gold_test.json  secondary_test.json
data/noisy/: train_noisy.json  val_noisy.json
data/synthetic/: train.json  train_gemini.json  train_negative.json  train_oral.json  val.json  val_negative.json
results/: ablation_results.json  bootstrap_results.json  calibration_results.json  crf_results.json  diversity_analysis.json  error_analysis.json  eval_report.json  eval_report.md  failure_cases.md  gemini_generation_stats.json  gpt_baseline_results.json  onnx_results.json  secondary_test_stats.json  talkbank_analysis.json
results/diagnostics/: diagnostic_report.json
results/eda/: eda_report.json
scripts/: create_figures.py  generate_test_set.py  offset_helper.py  run_ablation.py  run_api.py  run_bootstrap.py  run_calibration.py  run_crf.py  run_diagnose.py  run_diversity.py  run_eda.py  run_evaluate.py  run_failure_analysis.py  run_generate.py  run_generate_gemini.py  run_gpt_baseline.py  run_inference.py  run_noise.py  run_onnx.py  run_prepare.py  run_survey.py  run_talkbank_analysis.py  run_train.py
src/api/: __init__.py  schemas.py  serve.py
src/data/: __init__.py  generate.py  iterate.py  noise.py  survey.py  validate.py
src/evaluation/: __init__.py  analyze.py  metrics.py  report.py
tests/: test_api.py  test_api_v3.py  test_bioes.py  test_ensemble_v3.py  test_gemini.py  test_noise.py  test_rules_v3.py  test_validate.py
(+16 files in other folders)
