[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diabolocom-ner-challenge"
version = "3.0.0"
description = "Cold-start NER for ASR-transcribed customer service text"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
